--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background: url('https://images.unsplash.com/photo-1542779283-429940ce8336?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80') no-repeat center center;
+    background: url('https://images8.alphacoders.com/124/1243956.jpg') no-repeat center center;
     background-size: cover;
     filter: brightness(0.4);
     z-index: -1;
